@@ -7,16 +7,15 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.*;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -31,16 +30,17 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(AbstractHttpConfigurer::disable)
+                .csrf(csrf -> csrf.disable())
                 .cors(c -> c.configurationSource(corsConfigurationSource()))
                 .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .exceptionHandling(e -> e.authenticationEntryPoint(entryPoint))
                 .authorizeHttpRequests(reg -> reg
-                        // ✅ 인증 없이 허용할 엔드포인트(두 설정의 합집합)
+                        // 인증 없이 허용할 엔드포인트(두 설정의 합집합)
                         .requestMatchers(
                                 "/api/auth/**",        // 로그인/회원가입/리프레시 등
                                 "/api/address/**",     // 주소 API
                                 "/api/email/**",       // 이메일 API(사용 시)
+                                "/api/social/link",     // 소셜로그인 연동
                                 "/actuator/health",
                                 "/", "/index.html", "/favicon.ico",
                                 "/assets/**", "/static/**", "/public/**",
@@ -48,19 +48,17 @@ public class SecurityConfig {
                                 "/api/v1/join/**",
                                 "/api/v1/email/**",
                                 "/api/v1/customers/exists-email",
-                                "/deposit/productsList",
-                                "/deposit/accountList"
+                                "/deposit/products"
                         ).permitAll()
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/foreign/products/**").permitAll()
-                        // ✅ 그 외는 보호
+                        // 그 외는 보호
                         .anyRequest().authenticated()
                 )
-                // ✅ JWT 필터는 UsernamePasswordAuthenticationFilter 앞
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
-
-        http
-                .oauth2Login(oauth2 -> oauth2.successHandler(socialSuccessHandler));
+                // JWT 필터는 UsernamePasswordAuthenticationFilter 앞
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
+                .oauth2Login(oauth2 -> oauth2
+                        .successHandler(socialSuccessHandler));
 
         return http.build();
     }
@@ -78,18 +76,12 @@ public class SecurityConfig {
     /** CORS: app.cors.allowed-origins 에 정의된 도메인 허용(쉼표 구분) */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        var config = new CorsConfiguration();
-
-        List<String> origins = Arrays.stream(corsProps.getAllowedOrigins().split(","))
-                .map(String::trim)
-                .toList();
-        config.setAllowedOrigins(origins);
-        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-
-        config.setAllowedHeaders(Arrays.asList("Authorization","Content-Type","X-Requested-With","Origin","Accept"));
-        config.setExposedHeaders(Arrays.asList("Authorization", "Set-Cookie"));
-        config.setAllowCredentials(true);
-        config.setMaxAge(Duration.ofHours(1));
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of("http://localhost:3000"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true); // 쿠키 전송 핵심
+        config.setMaxAge(3600L);
 
         var source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
